[package]
name = "docker-bell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0"
clap = { version = "4", features = ["derive"] }
docker-api = "0"
env_logger = "0"
futures-util = "0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
tower-http = { version = "0", features = ["auth", "trace", "validate-request"] }
tracing = "0"
tracing-subscriber = "0"
